--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,13 +11,15 @@
     "@material-ui/styles": "4.11.4",
     "@mui/material": "^5.0.3",
     "axios": "^0.23.0",
-    "bootstrap": "5.0.2",
+    "bootstrap": "^5.1.3",
     "codemirror": "5.62.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-codemirror": "1.0.0",
     "react-codemirror2": "7.2.1",
     "react-dom": "17.0.2",
     "react-icons": "4.2.0",
+    "react-router": "^6.0.1",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
