--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "d3-graphviz": "^4.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
@@ -22,5 +23,4 @@
     "nodemon": "^2.0.14",
     "typescript": "^4.4.4"
   }
-  
 }
