--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,21 +5,25 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
     "@material-ui/core": "4.12.3",
     "@material-ui/styles": "4.11.4",
-    "@mui/material": "^5.0.3",
-    "axios": "^0.23.0",
-    "bootstrap": "^5.1.3",
+    "@mui/material": "5.0.3",
+    "axios": "0.23.0",
+    "bootstrap": "5.1.3",
     "codemirror": "5.62.2",
-    "react": "17.0.2",
-    "react-bootstrap": "^2.0.2",
+    "d3": "7.1.1",
+    "d3-graphviz": "4.0.0",
+    "graphviz-react": "1.2.0",
+    "next": "^12.0.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "2.0.2",
     "react-codemirror": "1.0.0",
     "react-codemirror2": "7.2.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "4.2.0",
-    "react-router": "^6.0.1",
+    "react-router": "6.0.1",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
